--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#0a4d3c">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%230a4d3c'/><text x='50' y='70' font-size='60' text-anchor='middle' fill='%2310b981' font-family='Arial, sans-serif' font-weight='bold'>H</text></svg>">
     
     <title>Horizon Africa Scholars | Transform Your Future</title>
     <style>
