--- a/index.html
+++ b/index.html
@@ -1748,7 +1748,7 @@
             <div class="stat-card">
                 <span class="stat-icon">💰</span>
                 <span class="stat-value">$1.9M+</span>
-                <span class="stat-label">Scholarships Secured</span>
+                <span class="stat-label">In Scholarships Secured</span>
             </div>
             <div class="stat-card">
                 <span class="stat-icon">🎓</span>
