--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="format-detection" content="telephone=yes">
@@ -190,6 +190,57 @@
             color: var(--primary);
             padding: 5px;
         }
+
+        /* Mobile Responsive */
+        @media (max-width: 768px) {
+            .mobile-menu-btn {
+                display: block;
+            }
+
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                gap: 15px;
+                background: rgba(255, 255, 255, 0.98);
+                position: absolute;
+                top: 70px;
+                left: 0;
+                width: 100%;
+                padding: 15px 0;
+                box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+                opacity: 0;
+                transition: max-height 0.3s ease, opacity 0.3s ease;
+            }
+
+            .nav-links.active {
+                display: flex;
+                opacity: 1;
+            }
+
+            .nav-cta {
+                width: 90%;
+                margin: 0 auto;
+                text-align: center;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .mobile-menu-btn {
+                display: none;
+            }
+
+            .nav-links {
+                display: flex !important;
+                position: static;
+                flex-direction: row;
+                gap: 35px;
+                background: none;
+                padding: 0;
+                box-shadow: none;
+                opacity: 1;
+            }
+        }
+
 
         /* Animated Background Orbs */
         .bg-orbs {
@@ -1915,7 +1966,9 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Horizon Africa</div>
+            <div class="logo" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+                Horizon Africa
+            </div>
             <button class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</button>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#services">Services</a></li>
@@ -2873,6 +2926,20 @@
                 submitBtn.disabled = false;
                 submitBtn.style.opacity = '1';
             });
+        // Mobile Menu
+            function toggleMobileMenu() {
+            const navLinks = document.getElementById('navLinks');
+            navLinks.classList.toggle('active');
+        }
+
+        // Optional: Add shadow on scroll
+        const navbar = document.getElementById('navbar');
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 20) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
+            }
 
             // Add floating label effect
             const inputs = contactForm.querySelectorAll('input, textarea, select');
