--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=5.0, user-scalable=yes">
+
+    <!-- iOS-specific -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=yes">
-    
+    <meta name="format-detection" content="telephone=yes, email=yes, address=yes">
+
+    <!-- Android-specific -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#000000">
+
+    <!-- General mobile optimization -->
+    <meta name="HandheldFriendly" content="true">
+    <meta http-equiv="x-rim-auto-match" content="none">
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="Horizon Africa Scholars provides strategic mentorship from Ivy League graduates to help African students secure admission and full financial aid at world-class universities.">
     <meta name="keywords" content="college admissions, ivy league, scholarships, SAT prep, essay writing, financial aid, Harvard, Yale, Princeton, Kenya, Africa">
