--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,7 @@
                 <a href="https://educationusa.state.gov/" target="_blank" class="resource-card">
                     <div class="resource-icon">🎯</div>
                     <div class="resource-content">
-                        <h4 class="resource-title">EducationUSA Kenya</h4>
+                        <h4 class="resource-title">EducationUSA</h4>
                         <p class="resource-desc">Official guidance on studying in the United States</p>
                     </div>
                     <div class="resource-arrow">→</div>
