--- a/index.html
+++ b/index.html
@@ -1877,6 +1877,7 @@
                 <li><a href="#services" onclick="closeMobileMenu()">Services</a></li>
                 <li><a href="#faq" onclick="closeMobileMenu()">FAQs</a></li>
                 <li><a href="#contact" onclick="closeMobileMenu()">Message Us</a></li>
+                <li><a href="#helpfulinks" onclick="closeMobileMenu()">Links</a></li>
                 <li><a href="#callus" class="nav-cta" onclick="closeMobileMenu()">Get Started</a></li>
             </ul>
         </div>
